logs/dag_id=weather_dag/run_id=scheduled__2024-06-22T00:00:00+00:00/task_id=processing_tasks.inject_data_lviv/attempt=8.log
[2024-06-24T11:02:26.714+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-24T11:02:26.737+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag.processing_tasks.inject_data_lviv scheduled__2024-06-22T00:00:00+00:00 [queued]>
[2024-06-24T11:02:26.748+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag.processing_tasks.inject_data_lviv scheduled__2024-06-22T00:00:00+00:00 [queued]>
[2024-06-24T11:02:26.749+0000] {taskinstance.py:2306} INFO - Starting attempt 8 of 8
[2024-06-24T11:02:26.765+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): processing_tasks.inject_data_lviv> on 2024-06-22 00:00:00+00:00
[2024-06-24T11:02:26.773+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=923) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-24T11:02:26.774+0000] {standard_task_runner.py:63} INFO - Started process 925 to run task
[2024-06-24T11:02:26.775+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'weather_dag', 'processing_tasks.inject_data_lviv', 'scheduled__2024-06-22T00:00:00+00:00', '--job-id', '87', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag.py', '--cfg-path', '/tmp/tmp9ms8y315']
[2024-06-24T11:02:26.778+0000] {standard_task_runner.py:91} INFO - Job 87: Subtask processing_tasks.inject_data_lviv
[2024-06-24T11:02:26.834+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_dag.processing_tasks.inject_data_lviv scheduled__2024-06-22T00:00:00+00:00 [running]> on host afc8096e8b86
[2024-06-24T11:02:26.984+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='weather_dag' AIRFLOW_CTX_TASK_ID='processing_tasks.inject_data_lviv' AIRFLOW_CTX_EXECUTION_DATE='2024-06-22T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='8' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-06-22T00:00:00+00:00'
[2024-06-24T11:02:26.986+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-24T11:02:26.987+0000] {sql.py:276} INFO - Executing: 
            INSERT INTO public.measures 
            VALUES (to_timestamp(1719226738), 
                   295.26,
                   51,
                   49,
                   4.43,
                   'Lviv'
            );
[2024-06-24T11:02:26.995+0000] {base.py:84} INFO - Using connection ID 'ps_db_conn' for task execution.
[2024-06-24T11:02:27.004+0000] {base.py:84} INFO - Using connection ID 'ps_db_conn' for task execution.
[2024-06-24T11:02:27.008+0000] {sql.py:487} INFO - Running statement: 
            INSERT INTO public.measures 
            VALUES (to_timestamp(1719226738), 
                   295.26,
                   51,
                   49,
                   4.43,
                   'Lviv'
            );, parameters: None
[2024-06-24T11:02:27.009+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-24T11:02:27.010+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 6:                    49,
                           ^

[2024-06-24T11:02:27.020+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=weather_dag, task_id=processing_tasks.inject_data_lviv, run_id=scheduled__2024-06-22T00:00:00+00:00, execution_date=20240622T000000, start_date=20240624T110226, end_date=20240624T110227
[2024-06-24T11:02:27.033+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 87 for task processing_tasks.inject_data_lviv (INSERT has more expressions than target columns
LINE 6:                    49,
                           ^
; 925)
[2024-06-24T11:02:27.069+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-24T11:02:27.087+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-24T11:02:27.090+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
